--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
          <i class="fas fa-rotate-right"></i>
        </button>
 
-       <div class="columns is-multiline is-variable is-2">
-         <div class="column is-one-fifth">
+       <div class="columns is-mobile is-variable is-2">
+         <div class="column">
            <div class="sim-tile">
              <video class="lemon-video" muted playsinline controls>
                <source src="./static/videos/lemon_1.mp4" type="video/mp4">
@@ -455,7 +455,7 @@
            </div>
            <p class="has-text-centered has-text-white is-size-7" style="margin-top: 0.5rem;">Trial 1</p>
          </div>
-         <div class="column is-one-fifth">
+         <div class="column">
            <div class="sim-tile">
              <video class="lemon-video" muted playsinline controls>
                <source src="./static/videos/lemon_2.mp4" type="video/mp4">
@@ -463,7 +463,7 @@
            </div>
            <p class="has-text-centered has-text-white is-size-7" style="margin-top: 0.5rem;">Trial 2</p>
          </div>
-         <div class="column is-one-fifth">
+         <div class="column">
            <div class="sim-tile">
              <video class="lemon-video" muted playsinline controls>
                <source src="./static/videos/lemon_3.mp4" type="video/mp4">
@@ -471,7 +471,7 @@
            </div>
            <p class="has-text-centered has-text-white is-size-7" style="margin-top: 0.5rem;">Trial 3</p>
          </div>
-         <div class="column is-one-fifth">
+         <div class="column">
            <div class="sim-tile">
              <video class="lemon-video" muted playsinline controls>
                <source src="./static/videos/lemon_4.mp4" type="video/mp4">
@@ -479,7 +479,7 @@
            </div>
            <p class="has-text-centered has-text-white is-size-7" style="margin-top: 0.5rem;">Trial 4</p>
          </div>
-         <div class="column is-one-fifth">
+         <div class="column">
            <div class="sim-tile">
              <video class="lemon-video" muted playsinline controls>
                <source src="./static/videos/lemon_5.mp4" type="video/mp4">
@@ -524,8 +524,8 @@
         <i class="fas fa-rotate-right"></i>
       </button>
 
-      <div class="columns is-multiline is-variable is-2 is-justify-content-center">
-        <div class="column is-one-third">
+      <div class="columns is-mobile is-variable is-2 is-justify-content-center">
+        <div class="column">
           <div class="sim-tile">
             <video class="lightbulb-video" muted playsinline controls>
               <source src="./static/videos/lightbulb_1.mp4" type="video/mp4">
@@ -533,7 +533,7 @@
           </div>
           <p class="has-text-centered has-text-white is-size-7" style="margin-top: 0.5rem;">Trial 1</p>
         </div>
-        <div class="column is-one-third">
+        <div class="column">
           <div class="sim-tile">
             <video class="lightbulb-video" muted playsinline controls>
               <source src="./static/videos/lightbulb_2.mp4" type="video/mp4">
@@ -541,7 +541,7 @@
           </div>
           <p class="has-text-centered has-text-white is-size-7" style="margin-top: 0.5rem;">Trial 2</p>
         </div>
-        <div class="column is-one-third">
+        <div class="column">
           <div class="sim-tile">
             <video class="lightbulb-video" muted playsinline controls>
               <source src="./static/videos/lightbulb_3.mp4" type="video/mp4">
